<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_color"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rbtgColores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp">

        <RadioButton
            android:id="@+id/rbtRojo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rbt_rojo" />

        <RadioButton
            android:id="@+id/rtbVerde"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbt_verde" />

        <RadioButton
            android:id="@+id/rbtAzul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbt_azul" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/lbl_estilo"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/chbNegrita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_negrita" />

        <CheckBox
            android:id="@+id/chbCursiva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_cursiva" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="casual"
        android:text="@string/txt_texto_de_prueba"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_modo_oscuro" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swModoOscuro"
            android:layout_width="48dp"
            android:layout_height="48dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_informacion_log" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swInformacionLog"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:checked="true" />
    </LinearLayout>

</LinearLayout>